# MCAC

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yml  .pre-commit-config.yaml  .pre-commit-config_more.yaml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake-format.py  pyproject.toml  requirements-intel.txt  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile.gfortran  Dockerfile.ifort  Dockerfile.intel  Dockerfile.local  HDF5options.cmake
.gitlab/: MCAC.yml  pyMCAC.yml  static.yml  tests.yml
Analyse_DLCA/: Analyse_DLCA.pro  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
Analyse_Projections2D/: Analyse_Projections2D.pro  Analyse_Projections2D_lnx.pro  Analyse_Projections2D_win.pro  Autocorrelation.cpp  GenerationDF3.cpp  Makefile  agg.cpp  agg.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Documents/: Notice installation OpenCV avec Qt.txt
Doxygen/: Doxyfile  makedocs.sh
Generateur_DLCA/: Generateur_DLCA.pro  Generateur_DLCA_lnx.pro  Generateur_DLCA_win.pro  IO.cpp  IO.h  IO.hpp  Makefile  Sphere.cpp  Sphere.h  Sphere.hpp  Sphere_physics.cpp  Sphere_storage.cpp  Spherelist.h  Spherelist.hpp  Spherelist_physics.cpp  Spherelist_storage.cpp  aggregat.cpp  aggregat.h  aggregat.hpp  aggregatList.cpp  aggregatList.h  aggregatList.hpp  boost_python.cpp  calcul.cpp  calcul.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  physical_model.cpp  physical_model.h  physical_model.hpp  sblvolumesurface.hpp  statistics.cpp  statistics.h  statistics.hpp  storage.h  storage.hpp  storage.tpp  (+6 more)
cas_test/: DonneesSuiviTemporel.txt  params.txt
cas_test/POVRAY_Anim_&_Visu/: AnimAgregation.sce  DLCA2POV.sci  VisuAgregation.sce  agregat-model.pov  agregat.pov  agregat.pov.bak  lecture.sce
cmake/: FindUnwind.cmake  FindXdmf.cmake  PyMCAC.cmake
cmake/cgal/: CGAL_GeneratorSpecificSettings.cmake  FindGMP.cmake  FindMPFR.cmake
docs/: A Unified algorithm for Ballistic to Diffusion Limited Cluster-Cluster Aggregation.docx  Code DLCCA yon.doc  Guide installation DLCA.txt  How to define a physical residence time with Diffusion Limited Cluster.doc  Notice installation OpenCV avec Qt.txt  Solutions de référence.txt
examples/: Analyze.ipynb  Jose Notebook.ipynb  MCAC tutorial.ipynb  blender.py  classic.ini  classic.txt  dynamic_plot.ipynb  params.txt
include/: Sphere.hpp  Spherelist.hpp  aggregat.hpp  aggregatList.hpp  calcul.hpp  constants.hpp  cst.hpp  exceptions.hpp  physical_model.hpp  statistics.hpp  storagelist.hpp  verlet.hpp
include/aggregats/: aggregat.hpp  aggregat_distance.hpp  aggregat_list.hpp
include/arvo/: arvo.hpp  arvo_mcac_call.hpp
include/elem_storage/: elem_storage.hpp  elem_storage_methods.hpp  storage.hpp
include/io/: format.hpp  threaded_io.hpp  writer.hpp  xmf_includes.hpp
include/list_storage/: list_storage.hpp  list_storage_methods.hpp
include/physical_model/: physical_model.hpp  physical_model_flame_coupling.hpp  physical_model_interpotential.hpp
include/sbl/: volume_surface.hpp
include/spheres/: Spherelist.hpp  sphere.hpp  sphere_collision.hpp  sphere_contact.hpp  sphere_distance.hpp  sphere_intersection.hpp  sphere_list.hpp
include/statistics/: statistics.hpp
include/tools/: contact_info.hpp  tools.hpp
include/verlet/: verlet.hpp
pymcac/: __init__.py  version.py
pymcac/plot/: __init__.py  projection.py  volumic.py
pymcac/reader/: __init__.py  advancement_reader.py  h5_reader.py  mcac_reader.py  xdmf_reader.py
pymcac/tests/: __init__.py  generator.py  test_dask.py  test_data.py  test_dataframe.py  test_groupby.py  test_read.py  test_sortby.py
pymcac/tools/: __init__.py  physics.py
pymcac/tools/autocorrelation/: __init__.py  _autocorrelation3d.py  autocorrelation3d.py
pymcac/tools/core/: __init__.py  dask_tools.py  dataframe.py  groupby.py  sorting.py  various.py
pymcac/tools/coverage/: __init__.py  _coverages.py  coverages.py  coverages_cython.pyx
pymcac/tools/discretize/: __init__.py  _discretize.py  discretize.py
pymcac/tools/inertia/: __init__.py  _inertia.py  inertia.py
pymcac/tools/physics/: __init__.py  mobility_diameter.py  overlap.py
pymcac/tools/volume_surface/: SBLVolumeSurface.cpp  SBLVolumeSurface.hpp  __init__.py  (+3 more)
pymcac/writer/: __init__.py  ddscat.py
python-analysis/: Analyze.ipynb  Analyze_cython.pyx  DLCA tutorial.ipynb  DLCA_Reader.py  DLCAtools.py  SBLVolumeSurface.cpp  SBLVolumeSurface.hpp  blender.py  dynamic_plot.ipynb  params.txt  sbl_wrapper.pyx
src/: .clang-tidy  .clang-tidy2  CMakeLists.txt  DLCA.pro  IO.cpp  IO.hpp  MCAC.pro  Sphere.hpp  Sphere_physics.cpp  Sphere_storage.cpp  Spherelist.hpp  Spherelist_physics.cpp  Spherelist_storage.cpp  aggregat.cpp  aggregat.hpp  aggregatList.cpp  aggregatList.hpp  calcul.cpp  calcul.hpp  exceptions.cpp  main.cpp  physical_model.cpp  physical_model.hpp  sblvolumesurface.cpp  sblvolumesurface.hpp  statistics.cpp  statistics.hpp  storage.hpp  storagelist.hpp  tools.cpp  verlet.cpp  verlet.hpp
src/aggregats/: aggregat.cpp  aggregat_distance.cpp  aggregat_list.cpp  aggregat_list_fractal_law.cpp  aggregat_list_storage.cpp  aggregat_storage.cpp
src/arvo/: arvo.cpp  arvo_mcac_call.cpp
src/io/: aggregat_list.cpp  format.cpp  physical_model.cpp  sphere_list.cpp  statistic_storage.cpp  threaded_io.cpp  writer.cpp
src/physical_model/: physical_model.cpp  physical_model_flame_coupling.cpp  physical_model_interpotential.cpp
src/sbl/: volume_surface.cpp
src/spheres/: Spherelist_physics.cpp  Spherelist_storage.cpp  sphere.cpp  sphere_collision.cpp  sphere_contact.cpp  sphere_distances.cpp  sphere_intersection.cpp  sphere_list.cpp  sphere_list_storage.cpp  sphere_storage.cpp
src/statistics/: statistics.cpp
src/tools/: tools.cpp
src/verlet/: verlet.cpp
utilities/: all_linters.sh  test_in_docker.sh  update_docker.sh
validation/: Analyze.ipynb  Surface_growth.ipynb  brownian.ipynb  brownian.py  monodisperse.ipynb  no_surface_reaction.ipynb  params_brownian.ini  params_monodisperse.ini  params_polydisperse.ini  params_pytest.ini  params_surface_growth.ini
