[metadata]
name = pymcac
description = Set of Python libraries for post-processing MCAC data
long_description = file: README.md
long_description_content_type = text/markdown
author = CNRS, CORIA UMR 6614
author_email = alexandre.poux@coria.fr
url = https://gitlab.coria-cfd.fr/MCAC/MCAC/
download_url = https://gitlab.coria-cfd.fr/MCAC/MCAC/repository/archive.zip?ref=master
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    rogramming Language :: Python :: 3 :: Only
    Topic :: Numerical simulation :: Science
    Environment :: Console
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
keywords = Numerical Simulation
license_file = LICENSE
license = GPLV3

[options]
packages = find:
include_package_data = True
setup_requires =
    numpy
    cython
    setuptools_scm
    setuptools
install_requires =
    numpy
    matplotlib
    scipy
    h5py
    pandas
    dask
    cython
    scikit-image
    lxml
    tqdm
    toolz
    fsspec>=0.3.3
    scikit-learn
    psutil
    cachey
    cloudpickle
python_requires = >=3.6
zip_safe = False

[build_ext]
force=1

[build-system]
requires = cython

[options.extras_require]
checks =
    mypy
    pydocstyle
    flake8
    pylint
profiling = birdseye

[mypy]

[mypy-pymcac.tools.volume_surface.sbl_wrapper]
ignore_missing_imports = True

[mypy-pymcac.tools.coverage.coverages_cython]
ignore_missing_imports = True

[mypy-h5py]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-dask]
ignore_missing_imports = True

[mypy-dask.*]
ignore_missing_imports = True

[mypy-numba]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-ipyparallel]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-sparse]
ignore_missing_imports = True

[mypy-skimage]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-mpl_toolkits.*]
ignore_missing_imports = True

[mypy-psutil]
ignore_missing_imports = True
