[metadata]
name = pymcac
description = Set of Python libraries for post-processing MCAC data
long_description = file: README.md
long_description_content_type = text/markdown
author = CNRS, CORIA UMR 6614
author_email = alexandre.poux@coria.fr
url = https://gitlab.coria-cfd.fr/MCAC/MCAC/
download_url = https://gitlab.coria-cfd.fr/MCAC/MCAC/repository/archive.zip?ref=master
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    rogramming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Numerical simulation :: Science
    Environment :: Console
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
keywords = Numerical Simulation
license_file = LICENSE
license = GPLV3

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    scipy
    h5py
    pandas
    xarray[accel]
    dask[complete]
    cython
    scikit-image
    lxml
    tqdm
    toolz
    fsspec>=0.3.3
    scikit-learn
    psutil
    cachey
    cloudpickle
python_requires = >=3.8
zip_safe = False

[build_ext]
force=1

[build-system]
requires = cython

[options.extras_require]
jupyter =
    jupyterlab
    ipykernel
    ipyparallel
    ipympl
    RISE
    jupyter_contrib_nbextensions
    jupyter_nbextensions_configurator
    xeus-python
    jupyterlab-lsp
    python-language-server[all]
    lckr-jupyterlab-variableinspector
    nbconvert

complete =
    %(jupyter)s

test =
    pytest
    pytest-html
    pytest-timeout
    pytest-cov
    pytest-sugar
    pytest-icdiff
    pytest-xdist[psutil]

dev =
    black[jupyter]
    isort[requirements_deprecated_finder]
    pre-commit
